--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/db_image?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/db_image?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username= vishwakarma
 spring.datasource.password= harekrishna
 
